fix: correct spelling in README and update cspell configuration

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -60,6 +60,7 @@
     "somthingelse",
     "stylelint",
     "TOGGLEFULLSCREEN",
+    "unasserted",
     "UPDATEMM",
     "userpresence",
     "vcgencmd",
