fix: use cross-platform Node.js script for postinstall
Fixes #360

- Replace shell `cp` command with Node.js script in postinstall
- Create scripts/postinstall.js using fs.copyFileSync()
- Works on Windows, Linux, and macOS
- Script checks if modules.json exists before copying

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint && prettier . --check",
     "lint:fix": "eslint --fix && prettier . --write",
     "prepare": "simple-git-hooks || echo 'No problem. Skipping git hooks installation.'",
-    "postinstall": "cp modules.json.template modules.json",
+    "postinstall": "node scripts/postinstall.js",
     "test": "node --run lint && node --run test:spelling && node --run test:unit",
     "test:coverage": "c8 --all node --test tests/unit/**/*.test.js",
     "test:spelling": "cspell .",
