chore: handle cspell issues

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -13,10 +13,12 @@
     "Ausschalten",
     "Bethge",
     "bokmål",
+    "busctl",
     "cambio",
     "chlog",
     "dangherve",
     "defaultmodules",
+    "DPMS",
     "Energieoptionen",
     "extdocs",
     "ezeholz",
@@ -32,10 +34,12 @@
     "khassel",
     "Kristjan",
     "kvpairs",
+    "listmonitors",
     "listname",
     "LOCKSTRING",
     "lockstrings",
     "longname",
+    "magicmirror",
     "MODULEAPI",
     "MONITOROFF",
     "MONITORON",
@@ -48,11 +52,16 @@
     "newsfeed",
     "newsitems",
     "Norsk",
+    "passwordless",
     "plusplus",
+    "poweroff",
+    "randr",
+    "raspi",
     "REFRESHMM",
     "remotecontrol",
     "RESTARTMM",
     "revparse",
+    "scrot",
     "SENDALERT",
     "shbatm",
     "showalert",
@@ -60,11 +69,15 @@
     "somthingelse",
     "stylelint",
     "TOGGLEFULLSCREEN",
+    "Trixie",
     "unasserted",
     "UPDATEMM",
     "userpresence",
     "vcgencmd",
     "Wooo",
+    "Xorg",
+    "xrandr",
+    "xset",
     "xsmall",
     "YOURAPIKEY"
   ],
