--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cspell": "^9.4.0",
     "eslint": "^9.39.2",
     "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-unicorn": "^62.0.0",
     "globals": "^16.5.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
