--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "lint:fix": "eslint --fix && prettier . --write",
     "prepare": "simple-git-hooks || echo 'No problem. Skipping git hooks installation.'",
     "postinstall": "node scripts/postinstall.js",
-    "test": "node --run lint && node --run test:spelling && node --run test:unit && node --run test:integration",
+    "test": "node --run lint && node --run test:spelling && node --run test:unit && node --run test:integration && node --run test:dom",
     "test:coverage": "c8 --all node --test tests/unit/**/*.test.js tests/integration/**/*.test.js",
+    "test:dom": "node --test tests/dom/**/*.test.js",
     "test:integration": "node --test tests/integration/**/*.test.js",
     "test:spelling": "cspell .",
     "test:unit": "node --test tests/unit/**/*.test.js"
@@ -53,6 +54,7 @@
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-unicorn": "^62.0.0",
     "globals": "^16.5.0",
+    "happy-dom": "^20.0.11",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "simple-git-hooks": "^2.13.1"
