--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cspell": "^9.4.0",
     "eslint": "^9.39.2",
     "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-jsdoc": "^61.5.0",
     "eslint-plugin-unicorn": "^62.0.0",
     "globals": "^16.5.0",
     "happy-dom": "^20.0.11",
