--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "type": "commonjs",
   "scripts": {
+    "demo": "cd ../../ && MM_CONFIG_FILE=modules/MMM-Remote-Control/demo.config.js node --run start:wayland:dev",
     "download_modules": "node ./scripts/download_modules_manually.mjs",
     "lint": "eslint && prettier . --check",
     "lint:fix": "eslint --fix && prettier . --write",
