--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint:fix": "eslint --fix && prettier . --write",
     "prepare": "simple-git-hooks || echo 'No problem. Skipping git hooks installation.'",
     "postinstall": "node scripts/postinstall.js",
+    "release": "commit-and-tag-version -a",
     "test": "node --run lint && node --run test:spelling && node --run test:unit && node --run test:integration && node --run test:dom",
     "test:coverage": "c8 --all node --test tests/unit/**/*.test.js tests/integration/**/*.test.js",
     "test:dom": "node --test tests/dom/**/*.test.js",
@@ -49,6 +50,7 @@
     "@eslint/js": "^9.39.2",
     "@eslint/json": "^0.14.0",
     "@eslint/markdown": "^7.5.1",
+    "commit-and-tag-version": "^12.6.1",
     "@stylistic/eslint-plugin": "^5.6.1",
     "c8": "^10.1.3",
     "cspell": "^9.4.0",
