--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,6 @@
     }
   ],
   "categories": ["utilities", "productivity"],
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "version": "4.0.0"
 }
