chore: add 'navbutton' and 'qrcode' to cspell configuration

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -48,6 +48,7 @@
     "MONITORTOGGLE",
     "mypayload",
     "Mysh",
+    "navbutton",
     "navicon",
     "newsfeed",
     "newsitems",
@@ -56,6 +57,7 @@
     "passwordless",
     "plusplus",
     "poweroff",
+    "qrcode",
     "randr",
     "raspi",
     "REFRESHMM",
