test: add test suite to GitHub Actions
- Add `node --run test` to automated-tests workflow
- Create defaultmodules.js shim for test environment
- Add fallback logic in node_helper.js for missing MagicMirror dependencies

--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -27,4 +27,6 @@ jobs:
         run: node --run test:spelling
       - name: Check linting
         run: node --run lint
+      - name: Run tests
+        run: node --run test
       - run: "echo '✨ Code quality checks completed with status: ${{ job.status }}.'"
