chore: require Node.js >= 22.0.0
uuid@13.0.0 requires Node.js 22+ to work with CommonJS require().
Users on older Node versions will see a compatibility warning during installation.

Fixes compatibility issues with uuid dependency on Node.js < 22.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "https://github.com/jopyth/MMM-Remote-Control/graphs/contributors"
   ],
   "type": "commonjs",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "demo": "cd ../../ && MM_CONFIG_FILE=modules/MMM-Remote-Control/demo.config.js node --run start:wayland:dev",
     "download_modules": "node ./scripts/download_modules_manually.mjs",
