--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsdoc": "^61.5.0",
     "eslint-plugin-unicorn": "^62.0.0",
+    "express": "^5.2.1",
     "globals": "^16.5.0",
     "happy-dom": "^20.0.11",
     "lint-staged": "^16.2.7",
