--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "demo": "cd ../../ && MM_CONFIG_FILE=modules/MMM-Remote-Control/demo.config.js node --run start:wayland:dev",
     "download_modules": "node ./scripts/download_modules_manually.mjs",
+    "generate-apikey": "node -p 'require(\"uuid\").v4()'",
     "lint": "eslint && prettier . --check",
     "lint:fix": "eslint --fix && prettier . --write",
     "prepare": "simple-git-hooks || echo 'No problem. Skipping git hooks installation.'",
