--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "license": "MIT",
   "author": "Joseph Bethge",
   "contributors": [
-    "https://github.com/jopyth/MMM-Remote-Control/graphs/contributors"
+    {
+      "name": "Contributors",
+      "url": "https://github.com/jopyth/MMM-Remote-Control/graphs/contributors"
+    }
   ],
   "type": "commonjs",
   "engines": {
@@ -54,8 +57,8 @@
     "@eslint/js": "^9.39.2",
     "@eslint/json": "^0.14.0",
     "@eslint/markdown": "^7.5.1",
-    "commit-and-tag-version": "^12.6.1",
     "@stylistic/eslint-plugin": "^5.6.1",
+    "commit-and-tag-version": "^12.6.1",
     "c8": "^10.1.3",
     "cspell": "^9.4.0",
     "eslint": "^9.39.2",
