refactor: extract config management into lib/configManager.js
Move 9 config utility functions from node_helper.js (~160 lines) to
a dedicated module for better separation of concerns and testability.

- Consolidate tests: replace helper.config.test.js, helper.getConfig.test.js
  with configManager.test.js (17 tests) and helper.moduleDir.test.js
- Update test mocks and remove duplicate findBestBackupSlot tests
- 181 tests passing, no breaking changes

Benefits:
- Better code organization and maintainability
- Improved test isolation (pure functions vs bound methods)
- No code duplication between tests

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -44,6 +44,9 @@
     "MONITORON",
     "MONITORSTATUS",
     "MONITORTOGGLE",
+    "mtimeBySlot",
+    "mtimes",
+    "myconfig",
     "mypayload",
     "Mysh",
     "navbutton",
