chore: switch changelog config format

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lint:fix": "eslint --fix && prettier . --write",
     "prepare": "simple-git-hooks || echo 'No problem. Skipping git hooks installation.'",
     "postinstall": "node scripts/postinstall.js",
-    "release": "commit-and-tag-version -a",
+    "release": "commit-and-tag-version -a --config ./changelog.config.js",
     "test": "node --run lint && node --run test:spelling && node --run test:unit && node --run test:integration && node --run test:dom",
     "test:coverage": "c8 --all node --test tests/unit/**/*.test.js tests/integration/**/*.test.js",
     "test:dom": "node --test tests/dom/**/*.test.js",
