chore: add "someaction" to cspell configuration

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -75,6 +75,7 @@
     "shbatm",
     "showalert",
     "SHOWALL",
+    "someaction",
     "somthingelse",
     "stylelint",
     "TOGGLEFULLSCREEN",
