--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -27,6 +27,10 @@ jobs:
         run: node --run test:spelling
       - name: Check linting
         run: node --run lint
-      - name: Run tests
-        run: node --run test
+      - name: Run unit tests
+        run: node --run test:unit
+      - name: Run integration tests
+        run: node --run test:integration
+      - name: Run DOM tests
+        run: node --run test:dom
       - run: "echo '✨ Code quality checks completed with status: ${{ job.status }}.'"
