chore: extend cspell words

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -2,7 +2,6 @@
   "version": "0.2",
   "language": "en",
   "words": [
-    "mmrc",
     "Andoramb",
     "apikey",
     "articlelessdetails",
@@ -43,6 +42,7 @@
     "LOCKSTRING",
     "lockstrings",
     "magicmirror",
+    "mmrc",
     "MODULEAPI",
     "MONITOROFF",
     "MONITORON",
@@ -60,7 +60,11 @@
     "NOPASSWD",
     "Norsk",
     "openmeteo",
+    "pagechanged",
+    "pagedecrement",
+    "pageincrement",
     "passwordless",
+    "pingnow",
     "plusplus",
     "postchangelog",
     "poweroff",
@@ -79,6 +83,7 @@
     "someaction",
     "somthingelse",
     "stylelint",
+    "testmodule",
     "TOGGLEFULLSCREEN",
     "Trixie",
     "unasserted",
