--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -33,4 +33,6 @@ jobs:
         run: node --run test:integration
       - name: Run DOM tests
         run: node --run test:dom
+      - name: Check test coverage
+        run: node --run test:coverage
       - run: "echo '✨ Code quality checks completed with status: ${{ job.status }}.'"
