feat: add zoom, background color and font color controls
Extends the existing CSS settings section in the edit menu with:
- Zoom slider (30–170% in UI, 30–200% via API, default 100%, center = 100%)
- Background color picker with reset button
- Font color picker with reset button

All three settings are persisted to settings.json and restored on
startup. REST API endpoints added:
  GET /api/zoom/:setting
  GET /api/backgroundcolor/:color  (rrggbb hex or 'reset')
  GET /api/fontcolor/:color        (rrggbb hex or 'reset')

Translations added for all 14 supported languages.
Swagger docs and README updated.

Closes #238

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -11,6 +11,7 @@
     "articlescrollup",
     "articletogglefull",
     "Ausschalten",
+    "backgroundcolor",
     "Bethge",
     "bokmål",
     "busctl",
@@ -25,6 +26,7 @@
     "ezeholz",
     "Ezequiel",
     "Flickr",
+    "fontcolor",
     "FULLSCREEN",
     "Hafas",
     "HIDEALERT",
@@ -75,6 +77,7 @@
     "remotecontrol",
     "RESTARTMM",
     "revparse",
+    "rrggbb",
     "scrot",
     "SENDALERT",
     "shbatm",
