refactor: split remote.js into topic-focused files (Schritt 7)
- remote-utils.js: translate, hide/show, setStatus, createSymbolText, …
- remote-socket.js: socket, sendSocketNotification, socketNotificationReceived, get, …
- remote-modules.js: module visibility, install, update, classes
- remote-config.js: config editor (createObjectGUI, createConfigElement, …)
- remote-menu.js: navigation, dynamic menus, showMenu, loadOtherElements

Each topic file extends Remote via Object.assign(Remote, { … }).
remote.js reduced from 2455 to 422 lines (state properties only).

Fix: move auto-init (Remote.init()) to end of remote-menu.js so all
methods are merged before init runs (was causing
"Remote.sendSocketNotification is not a function").

Update remote.html load order, ESLint config globals, and test setup.

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -102,6 +102,7 @@
   ],
   "ignorePaths": [
     "coverage/**",
+    "docs/simplification.md",
     "modules.json",
     "modules.json.template",
     "node_modules/**",
