refactor: convert remote scripts to ESM with import map (Schritt 8)
- Rename remote*.js → remote*.mjs (git mv)
- export const Remote from remote.mjs; remove globalThis.Remote assignment
- Add explicit imports in each topic file (Remote, marked)
- remote-menu.mjs becomes single entry point, imports all topic files
- remote.html: 7 <script> tags → importmap + single <script type="module">
- eslint.config.mjs: dedicated remote*.mjs rule with sourceType module,
  drop Remote/marked globals (no longer needed)
- Tests: replace vm.runInContext with globalThis mocks + await import()
- cspell: add "importmap"

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -3,6 +3,36 @@
   "language": "en",
   "words": [
     "Andoramb",
+    "Ausschalten",
+    "Bethge",
+    "DPMS",
+    "Energieoptionen",
+    "Ezequiel",
+    "FULLSCREEN",
+    "Flickr",
+    "HIDEALERT",
+    "HIDEALL",
+    "Hafas",
+    "Keyport",
+    "Kristjan",
+    "LOCKSTRING",
+    "MODULEAPI",
+    "MONITOROFF",
+    "MONITORON",
+    "MONITORSTATUS",
+    "MONITORTOGGLE",
+    "Mysh",
+    "NOPASSWD",
+    "Norsk",
+    "REFRESHMM",
+    "RESTARTMM",
+    "SENDALERT",
+    "SHOWALL",
+    "TOGGLEFULLSCREEN",
+    "Trixie",
+    "Wooo",
+    "Xorg",
+    "YOURAPIKEY",
     "apikey",
     "articlelessdetails",
     "articlemoredetails",
@@ -10,9 +40,7 @@
     "articleprevious",
     "articlescrollup",
     "articletogglefull",
-    "Ausschalten",
     "backgroundcolor",
-    "Bethge",
     "bokmål",
     "busctl",
     "cambio",
@@ -20,47 +48,29 @@
     "custommod",
     "dangherve",
     "defaultmodules",
-    "DPMS",
-    "Energieoptionen",
     "extdocs",
     "ezeholz",
-    "Ezequiel",
-    "Flickr",
     "fontcolor",
-    "FULLSCREEN",
-    "Hafas",
-    "HIDEALERT",
-    "HIDEALL",
     "homeassistant",
+    "importmap",
     "jopyth",
     "juzim",
     "kapsolas",
-    "Keyport",
     "khassel",
-    "Kristjan",
     "kvpairs",
     "listmonitors",
     "listname",
-    "LOCKSTRING",
     "lockstrings",
     "magicmirror",
     "mmrc",
-    "MODULEAPI",
-    "MONITOROFF",
-    "MONITORON",
-    "MONITORSTATUS",
-    "MONITORTOGGLE",
     "mtimeBySlot",
     "mtimes",
     "myconfig",
     "mypayload",
-    "Mysh",
     "navbutton",
     "navicon",
     "newsfeed",
     "newsitems",
-    "NOPASSWD",
-    "Norsk",
     "openmeteo",
     "pagechanged",
     "pagedecrement",
@@ -73,32 +83,23 @@
     "qrcode",
     "randr",
     "raspi",
-    "REFRESHMM",
     "remotecontrol",
-    "RESTARTMM",
     "revparse",
     "rrggbb",
     "scrot",
-    "SENDALERT",
     "shbatm",
     "showalert",
-    "SHOWALL",
     "someaction",
     "somthingelse",
     "stylelint",
     "testmodule",
-    "TOGGLEFULLSCREEN",
-    "Trixie",
     "unasserted",
     "updatenotification",
     "userpresence",
     "vcgencmd",
-    "Wooo",
-    "Xorg",
     "xrandr",
     "xset",
-    "xsmall",
-    "YOURAPIKEY"
+    "xsmall"
   ],
   "ignorePaths": [
     "coverage/**",
